--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/wxca/sampler#readme",
   "dependencies": {
-    "mocha": "^3.0.2"
+    "mocha": "^3.0.2",
+    "nconf": "^0.8.4"
   }
 }
